--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,30 @@ body {
   font-family: "Spoqa Han Sans Neo", "Sans-serif";
 }
 
+a {
+  all: unset;
+}
+
+a:link {
+  text-decoration: none;
+  color: #3f464d;
+}
+
+a:visited {
+  text-decoration: none;
+  color: #3f464d;
+}
+
+a:active {
+  text-decoration: none;
+  color: #3f464d;
+}
+
+a:hover {
+  text-decoration: none;
+  color: #3f464d;
+}
+
 .inner {
   width: 100%;
   height: 100%;
@@ -35,6 +59,11 @@ header {
 .head-container .head-brand {
   font-weight: bold;
   font-size: 1.2rem;
+}
+
+.head-container a:hover {
+  color: #2186c4;
+  cursor: pointer;
 }
 
 .head-container .head-blog {
