--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ a:hover {
   height: 100%;
   margin: 0 auto;
   padding: 0 2rem;
+  overflow: hidden;
 }
 
 header {
@@ -121,6 +122,7 @@ section {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  padding: 1rem 0;
 }
 
 .skill {
@@ -170,6 +172,102 @@ section {
 
 .vue-style {
   color: #2e7d32;
+}
+
+.roadmap-container {
+  width: 100%;
+  margin-top: 2rem;
+}
+
+.roadmap-title-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.roadmap-title {
+  font-size: 1.3rem;
+  font-weight: bold;
+  color: #545e6f;
+}
+
+.slide-prev {
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+.slide-next {
+  font-size: 2rem;
+  cursor: pointer;
+  color: #cfd8dc;
+}
+
+.arrow-container {
+  display: flex;
+}
+
+.class-list {
+  display: flex;
+  list-style: none;
+  padding: 1rem 0;
+  margin: 0 0;
+  overflow: hidden;
+}
+
+.class-card {
+  width: 240px;
+  box-shadow: 10px 10px 10px -5px rgba(25, 42, 70, 0.2);
+  border-radius: 8px;
+  margin: 0 10px;
+}
+
+.class-image {
+  width: 240px;
+  border-radius: 8px 8px 0 0;
+  height: 150px;
+}
+
+.class-container {
+  width: 100%;
+  padding: 0.5rem 1rem 1rem 1rem;
+}
+
+.class-skill {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.class-type {
+  font-size: 0.9rem;
+  color: #949393;
+}
+
+.class-format {
+  font-size: 0.9rem;
+  color: #0d47a1;
+  padding: 0.2rem;
+}
+
+.class-desc {
+  width: 100%;
+  margin-top: 1rem;
+}
+
+.class-title {
+  font-weight: bold;
+  color: #545e6f;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-bottom: 0.5rem;
+}
+
+.class-detail {
+  font-size: 0.9rem;
+  color: #545e6f;
 }
 
 @media only screen and (min-width: 1200px) {
