--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,11 @@ section {
   padding: 0.5rem 1rem;
   margin: 0rem 1rem;
   box-shadow: 10px 10px 10px -5px rgba(25, 42, 70, 0.2);
+  transition: 0.4s;
+}
+
+.skill:hover {
+  transform: translate(0, -5px);
 }
 
 .skill-icon {
@@ -220,6 +225,12 @@ section {
   box-shadow: 10px 10px 10px -5px rgba(25, 42, 70, 0.2);
   border-radius: 8px;
   margin: 0 10px;
+  transition: 0.4s;
+}
+
+.class-card:hover {
+  box-shadow: 10px 10px 10px 0px rgba(25, 42, 70, 0.2);
+  transform: translate(0, -5px);
 }
 
 .class-image {
@@ -268,6 +279,15 @@ section {
 .class-detail {
   font-size: 0.9rem;
   color: #545e6f;
+  line-height: 1.5rem;
+}
+
+.roadmap-desc {
+  display: visible;
+}
+
+li a:hover {
+  cursor: pointer;
 }
 
 @media only screen and (min-width: 1200px) {
@@ -278,6 +298,10 @@ section {
 
 @media only screen and (max-width: 980px) {
   .skill-container {
+    display: none;
+  }
+
+  .roadmap-desc {
     display: none;
   }
 }
