--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
   font-family: "Spoqa Han Sans Neo", "Sans-serif";
 }
 
+/* a 링크 태그 스타일 초기화 */
 a {
   all: unset;
 }
@@ -33,11 +34,11 @@ a:hover {
 }
 
 .inner {
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
-  padding: 0 2rem;
-  overflow: hidden;
+  width: 100%; /* 가로 사이즈가 1200px 넘는 해상도에서는 max-width 설정 */
+  height: 100%; /* align-items 등으로 수직 가운데 정렬을 위해, 알맞은 height 설정이 필요함 */
+  margin: 0 auto; /* 가운데 정렬: 동일 요소에 width 가 설정되어 있을 때에만 적용 */
+  padding: 0rem 2rem; /* 좌우 padding 을 살짝 주어서, 좌우에 딱 붙지 않도록 함 */
+  overflow: hidden; /* 넘치는 영역에 대해서는 표시안되도록 작성해야 함 */
 }
 
 header {
@@ -58,19 +59,26 @@ header {
   align-items: center;
 }
 
+/* 필요시 세부 설정을 위해, 상단 좌측 브랜드만을 별도로 클래스로 정의 */
 .head-container .head-brand {
   font-weight: bold;
   font-size: 1.2rem;
 }
 
-.head-container a:hover {
+.head-container .head-brand a:hover {
   color: #2186c4;
   cursor: pointer;
 }
 
+/* 필요시 세부 설정을 위해, 상단 우측 메뉴만을 별도로 클래스로 정의 */
 .head-container .head-blog {
   font-weight: bold;
   font-size: 1.2rem;
+}
+
+.head-container .head-blog a:hover {
+  color: #2186c4;
+  cursor: pointer;
 }
 
 section {
@@ -80,21 +88,22 @@ section {
 }
 
 .main {
-  height: 360px;
+  height: 360px; /* 화면 이미지 고정 */
   background-image: url("https://www.fun-coding.org/assets_lms/images/photodune-4161018-group-of-students-m.jpg");
   background-size: cover;
-  background-position: center 10%;
+  background-position: center 10%; /* 이미지 위치를 살짝 위로 올리기 위한 position 설정 */
   background-repeat: no-repeat;
   z-index: 1;
 }
 
+/* 배경 이미지에 색상을 어둡게 하기 위해, 어두운 색상으로 이미지 상위에 투명도를 주어 덮어씌움 */
 .main-container {
   width: 100%;
   height: 100%;
   background-color: rgb(47, 48, 89);
   opacity: 0.8;
   z-index: 2;
-  margin-top: 60px;
+  margin-top: 60px; /* position 이 fixed 일 경우, 문서 흐름에서 빠지므로, 이 부분은 margin 으로 적용 */
 }
 
 .title-container {
@@ -132,7 +141,10 @@ section {
   align-items: center;
   border-radius: 9px;
   padding: 0.5rem 1rem;
-  margin: 0rem 1rem;
+  margin: 0 1rem;
+  /* box-shadow: 블럭에 그림자를 적용하는 CSS 기능
+     https://developer.mozilla.org/ko/docs/Web/CSS/box-shadow 
+     offset-x | offset-y | blur-radius | spread-radius | color */
   box-shadow: 10px 10px 10px -5px rgba(25, 42, 70, 0.2);
   transition: 0.4s;
 }
@@ -200,6 +212,7 @@ section {
 .slide-prev {
   font-size: 2rem;
   cursor: pointer;
+  color: rgb(47, 48, 89);
 }
 
 .slide-next {
@@ -216,17 +229,20 @@ section {
   display: flex;
   list-style: none;
   padding: 1rem 0;
-  margin: 0 0;
+  margin: 0;
   overflow: hidden;
 }
 
 .class-card {
   width: 240px;
+  /* box-shadow: 블럭에 그림자를 적용하는 CSS 기능
+     https://developer.mozilla.org/ko/docs/Web/CSS/box-shadow 
+     offset-x | offset-y | blur-radius | spread-radius | color */
   box-shadow: 10px 10px 10px -5px rgba(25, 42, 70, 0.2);
   border-radius: 8px;
   margin: 0 10px;
   transition: 0.4s;
-  /* 인터넷 익스플로러 호환성 */
+  /* IE11 에서는 flex 설정시, 디폴트로 flex 아이템들에 고정 너비를 무시 */
   flex-shrink: 0;
 }
 
@@ -236,7 +252,11 @@ section {
 }
 
 .class-image {
+  /* 사이즈가 큰 이미지를 작은 블럭 내에 넣을 때 호환성을 위해 max-width/max-height 를 사용해야 함 */
   max-width: 240px;
+
+  /* border-radius: 블럭 모서리를 둥글게 하는 CSS 기능
+     top-left | top-right | bottom-right | bottom-left */
   border-radius: 8px 8px 0 0;
 }
 
@@ -258,7 +278,8 @@ section {
 
 .class-format {
   font-size: 0.9rem;
-  color: #0d47a1;
+  color: #fff;
+  background-color: #0d47a1;
   padding: 0.2rem;
 }
 
@@ -314,6 +335,47 @@ footer {
   margin: 1rem 0.5rem;
 }
 
+#backtotop {
+  background-color: rgb(47, 48, 89);
+  width: 40px;
+  height: 40px;
+  text-align: center;
+
+  border-radius: 20px;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  transition-property: background-color, opacity, visibility;
+  transition-duration: 0.3s, 0.5s, 0.5s;
+  opacity: 0;
+  visibility: hidden;
+  z-index: 999;
+}
+
+/* 아이콘 적용 방법
+  1. ::after (요소 뒤에 content 추가) 가상 요소에서,
+  2. content: "폰트어썸 유니코드" 를 넣고,
+  3. font-family: FontAwesome 이라고 넣으면 됨
+*/
+#backtotop::after {
+  content: "\f077";
+  font-family: FontAwesome;
+  font-size: 1.5rem;
+  line-height: 40px;
+  color: #fff;
+}
+
+#backtotop.show:hover {
+  cursor: pointer;
+  background-color: #2186c4;
+}
+
+#backtotop.show {
+  opacity: 1;
+  visibility: visible;
+  background-color: rgb(47, 48, 49);
+}
+
 @media only screen and (min-width: 1200px) {
   .inner {
     max-width: 1200px;
@@ -324,7 +386,6 @@ footer {
   .skill-container {
     display: none;
   }
-
   .roadmap-desc {
     display: none;
   }
