--- a/css/style.css
+++ b/css/style.css
@@ -221,6 +221,16 @@ section {
   color: #cfd8dc;
 }
 
+.slide-prev-hover:hover {
+  transition: transform 0.5s;
+  transform: translateX(-2px);
+}
+
+.slide-next-hover:hover {
+  transition: transform 0.5s;
+  transform: translateX(2px);
+}
+
 .arrow-container {
   display: flex;
 }
@@ -230,7 +240,7 @@ section {
   list-style: none;
   padding: 1rem 0;
   margin: 0;
-  overflow: hidden;
+  overflow: none;
 }
 
 .class-card {
